--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -1,4 +1,28 @@
 {
+    "home-header": {
+        "speciality": "Chuyên khoa",
+        "search-doctor": "Tìm bác sĩ theo chuyên khoa",
+        "health-facility": "Cơ sở y tế",
+        "select-room": "Chọn bệnh viện phòng khám",
+        "doctor": "Bác sĩ",
+        "good-doctor": "Chọn bác sĩ giỏi",
+        "package": "Gói khám",
+        "total-package": "Khám sức khỏe tổng quát",
+        "support": "Hỗ trợ"
+    },
+    "banner": {
+        "title1": "NỀN TẢNG Y TẾ",
+        "title2": "CHĂM SÓC SỨC KHỎE TOÀN DIỆN",
+        "child1": "Khám chuyên khoa",
+        "child2": "Khám từ xa",
+        "child3": "Khám tổng quát",
+        "child4": "Xét nghiệm y học",
+        "child5": "Sức khỏe tinh thần",
+        "child6": "Khám nha khoa",
+        "child7": "Gói phẫu thuật",
+        "child8": "Sản phẩm y tế"
+    },
+    
     "common": {
         "add": "Thêm",
         "edit": "Sửa",
