--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -55,8 +55,7 @@
             "system-administrator": {
                 "header": "System Administrator",
                 "user-manage": "User manage",
-                "product-manage": "Package manage",
-                "register-package-group-or-account": "Register service package for group/account"
+                "user-redux": "User redux manage"
             },
             "system-parameter": {
                 "header": "System-parameter"
