--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -55,8 +55,7 @@
             "system-administrator": {
                 "header": "Quản trị hệ thống",
                 "user-manage": "Quản lý người sử dụng",
-                "product-manage": "Quản lý gói",
-                "register-package-group-or-account": "Đăng ký gói dịch vụ cho nhóm/tài khoản"
+                "user-redux": "Quản lý người dùng redux"
             },
             "system-parameter": {
                 "header": "Tham số hệ thống"
